# microservicios-c-

./: README.md
client-server-docker/: client.dockerfile
client-server-docker/client/: Dockerfile  medium_client.cpp
client-server-docker/server/: Dockerfile  medium_server.cpp
crow-tls/: CMakeLists.txt  Dockerfile  server.cpp
docker-ubuntu/hello_cpp_crow_vcpkg/: CMakeLists.txt  Dockerfile
docker-ubuntu/hello_cpp_http/: CMakeLists.txt  Dockerfile  main.cpp
json/: Dockerfile  main.cpp
k8s_kubernetes/: crow-https-simple.yaml
